# naive-crypto

./: .gitignore  CMakeLists.txt  Makefile  README.md  prime.cpp  prime.h  rsa.cpp  test.cpp  type.cpp  type.h
include/: prime.h
src/: prime.cpp
